--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,26 @@
+body {
+  font-size: 18px;
+  font-family: 'Open Sans', sans-serif;
+}
+
+h1,
+h2,
+h3 {
+  text-align: center;
+  color: #20aa3e;
+}
+
 .container {
   max-width: 800px;
   margin: 0 auto;
+}
+
+.joke {
+  font-size: 20px;
+  color: #257210;
+}
+
+.tags {
+  text-align: right;
+  color: yellowgreen;
 }
