--- a/src/css/style.css
+++ b/src/css/style.css
@@ -24,3 +24,13 @@ h3 {
   text-align: right;
   color: yellowgreen;
 }
+
+.button1 {
+  background-color: #20aa3e;
+  border: none;
+  color: white;
+  padding: 10px 27px;
+  text-decoration: none;
+  text-transform: uppercase;
+  cursor: pointer;
+}
